@@ -2,11 +2,15 @@
 
 Version 1.0-10
 =============
+NEW FEATURES
 - update the FAQ with beta(a,a).
 - improve graphics for discrete distributions in denscomp().
 - improve automatic naming of legends in xxxcomp().
 - harmonize outputs in mledist, qmedist, mmedist, mgedist, fitdist and fitdistcens.
 - automatic test of d,p,q functions
+
+BUG FIXES
+- bug fixed concerning the use of gofstat with a chi squared df <=0 (error message blocking the other functions)
 
 Version 1.0-9
 =============
